--- a/python-ai-backend/Dockerfile
+++ b/python-ai-backend/Dockerfile
@@ -1,8 +1,17 @@
 # Use an official Python runtime as a parent image
 FROM python:3.9-slim
 
+# Install system dependencies required by ML packages
+RUN apt-get update && apt-get install -y --no-install-recommends \
+        git \
+    && rm -rf /var/lib/apt/lists/*
+
 # Set the working directory in the container
 WORKDIR /app
+
+# Location for cached Hugging Face models
+ENV HF_HOME=/models
+RUN mkdir -p "$HF_HOME"
 
 # Copy the requirements file into the container at /app
 COPY requirements.txt .
