--- a/python-ai-backend/requirements.txt
+++ b/python-ai-backend/requirements.txt
@@ -1,4 +1,8 @@
 Flask>=2.0.0
 Pillow>=9.0.0
 opencv-python>=4.5.0
-Flask-CORS>=3.0.0 
+Flask-CORS>=3.0.0
+torch>=2.0
+transformers>=4.35
+diffusers>=0.24
+huggingface-hub>=0.20
